Grease Pencil - CRASH When Selecting Camera #72976

Closed
opened 2020-01-08 19:49:08 +01:00 by ronsn · 4 comments

System Information
Operating system: Linux-5.0.0-37-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-08 16:23, hash: e72ecaa371
Worked: (optional)

Short description of error
When in 2D Animation template/workspace Blender crashes if you select the Camera in Object Mode.

The this issue was caused by this Git commit fa3a0697b846bd0ed3766fcabd1bf6f260aa425a (fa3a0697b8)

Exact steps for others to reproduce the error

  1. Open Blender and select "2D Animation" in splash screen
  2. Press Tab twice to change from "Draw" mode to "Object Mode".
  3. Select your Camera in the Outliner, or in 3D space => Crash
**System Information** Operating system: Linux-5.0.0-37-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-08 16:23, hash: `e72ecaa371` Worked: (optional) **Short description of error** When in 2D Animation template/workspace Blender crashes if you select the Camera in Object Mode. The this issue was caused by this Git commit `fa3a0697b846bd0ed3766fcabd1bf6f260aa425a` (fa3a0697b8) **Exact steps for others to reproduce the error** 1. Open Blender and select "2D Animation" in splash screen 2. Press `Tab` twice to change from "Draw" mode to "Object Mode". 3. Select your Camera in the Outliner, or in 3D space => Crash
Author

Added subscriber: @ronsn

Added subscriber: @ronsn
Antonio Vazquez self-assigned this 2020-01-08 22:42:05 +01:00

This issue was referenced by 533d146f48

This issue was referenced by 533d146f48d1a12c75506c4fca38f577902b79bf

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Author

Your fix works :) Thank you @antoniov <3

Your fix works :) Thank you @antoniov <3
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72976
No description provided.