Fix T72976: CRASH When Selecting Camera